# ecommerce_etl

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml  requirements.txt
src/ecommerce_etl/: bronze.py  config.py  enums.py  gold.py  io.py  pipeline.py  quality.py  schemas.py  serve.py  silver.py  transforms.py
tests/: test_quality.py  test_transforms.py
