[project]
name = "ecommerce-etl"
version = "0.1.0"
description = "Medallion ETL (Bronze/Silver/Gold) for a Brazilian e-commerce dataset"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "pandera[polars]>=0.32.1",
    "polars>=1.42.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
notebook = ["jupyterlab>=4"]

[project.scripts]
etl = "ecommerce_etl.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
